add a notification on submit

--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
                     studentId: 4321,
                     behavior: behaviorLog
                 });
+
+                alert("Log Submitted");
+
             });
 
 
