--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
         </div>
 
-        <Button id="nextPage">Next Page</Button>
+        <Button id="nextPage" class="submitBtn btn btn-primary">Next Page</Button>
 
     </div>
 
@@ -114,7 +114,7 @@
             $('.questPanels').find("textarea").focus(function(){
                 behaviorLog.push({
                     type: "focus",
-                    value: $( this ).val()
+                    value: $( this ).val() || ""
                 });
             });
 
@@ -123,7 +123,7 @@
                 behaviorLog.push({
                     type: "submit",
                     scale: Math.floor((Math.random() * 10) + 1),//add the score from Mave
-                    value: $( this ).siblings( "textarea").val()
+                    value: $( this ).siblings( "textarea").val() || ""
                 });
             });
 
@@ -132,7 +132,7 @@
                 behaviorLog.push({
                     type: "textChange",
                     id: $(this).attr("id"),
-                    value: $(this).val()
+                    value: $(this).val() || ""
                 });
             });
 
@@ -180,7 +180,6 @@
                 });
 
                 alert("Log Submitted");
-
             });
 
 
